--- a/backend-parent/pom.xml
+++ b/backend-parent/pom.xml
@@ -10,6 +10,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>common</module>
+        <module>content</module>
+        <module>generator</module>
     </modules>
 
     <properties>
