--- a/backend-parent/pom.xml
+++ b/backend-parent/pom.xml
@@ -12,6 +12,7 @@
         <module>common</module>
         <module>content</module>
         <module>generator</module>
+        <module>system</module>
     </modules>
 
     <properties>
@@ -34,7 +35,7 @@
         <swagger-annotations.version>1.5.20</swagger-annotations.version>
         <commons-lang3.version>3.10</commons-lang3.version>
         <okhttp.version>4.8.1</okhttp.version>
-        <swagger-spring-boot-starter.version>1.9.0.RELEASE</swagger-spring-boot-starter.version>
+        <knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
         <elasticsearch.version>7.12.1</elasticsearch.version>
     </properties>
 
@@ -173,9 +174,9 @@
                 <version>${commons-lang3.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.spring4all</groupId>
-                <artifactId>swagger-spring-boot-starter</artifactId>
-                <version>${swagger-spring-boot-starter.version}</version>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>2.0.8</version>
             </dependency>
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
