--- a/backend-parent/system/system-api/pom.xml
+++ b/backend-parent/system/system-api/pom.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mewp.edu</groupId>
-        <artifactId>content</artifactId>
+        <artifactId>system</artifactId>
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>content-api</artifactId>
-    <version>1.0.0</version>
+    <artifactId>system-api</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.mewp.edu</groupId>
-            <artifactId>content-service</artifactId>
+            <artifactId>system-service</artifactId>
             <version>1.0.0</version>
         </dependency>
 
