--- a/backend-parent/system/system-api/src/main/resources/bootstrap.yml
+++ b/backend-parent/system/system-api/src/main/resources/bootstrap.yml
@@ -1,14 +1,14 @@
 server:
-  port: 63040
+  port: 63110
   servlet:
-    context-path: /content
+    context-path: /system
 
 spring:
   application:
-    name: content-api
+    name: system-api
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.3.156:3306/edu-content?serverTimezone=UTC&userUnicode=true&useSSL=false
+    url: jdbc:mysql://192.168.3.156:3306/edu-system?serverTimezone=UTC&userUnicode=true&useSSL=false
     username: root
     password: root
 
