--- a/backend-parent/pom.xml
+++ b/backend-parent/pom.xml
@@ -13,6 +13,7 @@
         <module>content</module>
         <module>generator</module>
         <module>system</module>
+        <module>gateway</module>
     </modules>
 
     <properties>
