创建媒资管理微服务

--- a/backend-parent/pom.xml
+++ b/backend-parent/pom.xml
@@ -14,6 +14,7 @@
         <module>generator</module>
         <module>system</module>
         <module>gateway</module>
+        <module>media</module>
     </modules>
 
     <properties>
