--- a/backend-parent/media/media-service/pom.xml
+++ b/backend-parent/media/media-service/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>okhttp</artifactId>
         </dependency>
 
+        <!-- XXL-JOB 分布式任务调度 -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
+
         <!-- 排除 Spring Boot 依赖的日志包冲突 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
