--- a/backend-parent/gateway/pom.xml
+++ b/backend-parent/gateway/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
