--- a/backend-parent/pom.xml
+++ b/backend-parent/pom.xml
@@ -37,7 +37,7 @@
         <swagger-annotations.version>1.5.20</swagger-annotations.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <okhttp.version>4.8.1</okhttp.version>
-        <knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
+        <knife4j.version>2.0.8</knife4j.version>
         <elasticsearch.version>7.12.1</elasticsearch.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
     </properties>
@@ -167,8 +167,13 @@
             </dependency>
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-micro-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
-                <version>2.0.8</version>
+                <version>${knife4j.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.elasticsearch.client</groupId>
