课程预览功能，增加freemarker模版引擎

--- a/backend-parent/content/content-api/src/main/resources/bootstrap.yml
+++ b/backend-parent/content/content-api/src/main/resources/bootstrap.yml
@@ -25,3 +25,6 @@ spring:
           - data-id: logging-${spring.profiles.active}.yaml
             group: backend-common
             refresh: true
+          - data-id: freemarker-config-${spring.profiles.active}.yaml
+            group: backend-common
+            refresh: true
