--- a/backend-parent/content/content-api/pom.xml
+++ b/backend-parent/content/content-api/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>knife4j-micro-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- Spring Boot 对结果视图 Freemarker 集成 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
