课程发布功能，实现页面的静态化

--- a/backend-parent/content/content-service/src/main/resources/bootstrap.yml
+++ b/backend-parent/content/content-service/src/main/resources/bootstrap.yml
@@ -14,3 +14,7 @@ spring:
         group: backend-parent
         file-extension: yaml
         refresh-enabled: true
+        shared-configs:
+          - data-id: feign-${spring.profiles.active}.yaml
+            group: backend-common
+            refresh: true
