--- a/backend-parent/pom.xml
+++ b/backend-parent/pom.xml
@@ -15,6 +15,7 @@
         <module>system</module>
         <module>gateway</module>
         <module>media</module>
+        <module>message-sdk</module>
     </modules>
 
     <properties>
