增加搜索服务，模块初始化

--- a/backend-parent/pom.xml
+++ b/backend-parent/pom.xml
@@ -16,6 +16,7 @@
         <module>gateway</module>
         <module>media</module>
         <module>message-sdk</module>
+        <module>search</module>
     </modules>
 
     <properties>
